# multi-chat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  chat.html
crates/yt-chat-scraper/: Cargo.toml
crates/yt-chat-scraper/src/: main.rs  misc.rs
src/: dgg.rs  kick.rs  main.rs  printer.rs  types.rs  web_ui.rs  ws_server.rs  youtube.rs
src/youtube/: misc.rs  mod.rs  scraper.rs
templates/: chat_msg.html.jinja
