[package]
name = "chat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
colored = { version = "2.1.0" }
env_logger = "0.10.1"
futures-util = "0.3.30"
jsonpath-rust = "0.4.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["brotli"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.20.1", features = ["rustls", "rustls-tls-native-roots"] }
url = "2.4.1"
